--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "apollo-boost": "^0.1.28",
     "babel-preset-react": "^6.24.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-apollo": "^2.4.1",
+    "react-dom": "^16.8.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
