--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": ">=3.1.11"
   }
 }
